# tsmx_app

./: .gitignore  README.md  env.example.json  pubspec.yaml
android/: gradle.properties
docs/: state_service_architecture.md
frappe_apps/tmsx_mobile/: MANIFEST.in  README.md  pyproject.toml
frappe_apps/tmsx_mobile/tmsx_mobile/: hooks.py  modules.txt  setup.py
frappe_apps/tmsx_mobile/tmsx_mobile/api/: auth.py
frappe_apps/tmsx_mobile/tmsx_mobile/config/: desktop.py
frappe_apps/tmsx_mobile/tmsx_mobile/tmsx_mobile/doctype/delivery_activity_log/: delivery_activity_log.json  delivery_activity_log.py
frappe_apps/tmsx_mobile/tmsx_mobile/tmsx_mobile/doctype/delivery_tracking_point/: delivery_tracking_point.json  delivery_tracking_point.py
frappe_apps/tmsx_mobile/tmsx_mobile/tmsx_mobile/doctype/sales_tracking_point/: sales_tracking_point.json  sales_tracking_point.py
frappe_apps/tmsx_mobile/tmsx_mobile/tmsx_mobile/doctype/sales_visit/: sales_visit.json  sales_visit.py
frappe_apps/tmsx_mobile/tmsx_mobile/tmsx_mobile/doctype/sales_visit_competitor/: sales_visit_competitor.json  sales_visit_competitor.py
frappe_apps/tmsx_mobile/tmsx_mobile/tmsx_mobile/doctype/sales_visit_potential_order/: sales_visit_potential_order.json  sales_visit_potential_order.py
frappe_apps/tmsx_mobile/tmsx_mobile/tmsx_mobile/doctype/tmsx_mobile_role_module/: tmsx_mobile_role_module.json  tmsx_mobile_role_module.py
frappe_apps/tmsx_mobile/tmsx_mobile/tmsx_mobile/doctype/tmsx_mobile_settings/: tmsx_mobile_settings.json  tmsx_mobile_settings.py
lib/: main.dart
linux/: CMakeLists.txt
(+200 files in other folders)
