[project]
name = "tmsx_mobile"
authors = [
  { name = "TMSX", email = "admin@example.com" }
]
description = "Mobile backend bridge for TMSX ERP Flutter app"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"
erpnext = ">=15.0.0"
